--- a/bibs.bib
+++ b/bibs.bib
@@ -1,3 +1,20 @@
+@article{arora-concrrentTesting-16,
+  author    = {Vinay Arora and
+               Rajesh Kumar Bhatia and
+               Maninder Singh},
+  title     = {A systematic review of approaches for testing concurrent programs},
+  journal   = {Concurr. Comput. Pract. Exp.},
+  volume    = {28},
+  number    = {5},
+  pages     = {1572--1611},
+  year      = {2016},
+  url       = {https://doi.org/10.1002/cpe.3711},
+  doi       = {10.1002/cpe.3711},
+  timestamp = {Mon, 02 Mar 2020 17:20:24 +0100},
+  biburl    = {https://dblp.org/rec/journals/concurrency/AroraBS16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{2-opt,
 author = {Johnson, David and A. McGeoch, Lyle},
 year = {1997},
@@ -2521,7 +2538,7 @@ series = {PPoPP '05}
 
 
 
-@inproceedings{yu-pser-isca09,
+@inproceedings{yu-pset-isca09,
 author = {Yu, Jie and Narayanasamy, Satish},
 title = {A Case for an Interleaving Constrained Shared-Memory Multi-Processor},
 year = {2009},
