--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -76,9 +76,14 @@ ganesh@cs.utah.edu}
 golang, concurrency, testing coverage analysis
 \end{IEEEkeywords}
 
-\section{GIntroduction}
-\label{sec:Gintro}
-\input{Gintro.tex}
+%\section{GIntroduction}
+%\label{sec:Gintro}
+%\input{Gintro.tex}
+
+\section{Introduction}
+\label{sec:intro}
+\input{intro.tex}
+
 
 \section{Background}
 \label{sec:bg}
