--- a/intro.tex
+++ b/intro.tex
@@ -1,92 +1,112 @@
-Go \cite{go} is a statically typed language initially developed by Google and at present widely used by many.
+The use of increasing levels of parallelism and concurrency in HPC and Cloud is a double-edged sword: while it helps increase performance, save energy, and enhance user experience, it
+unfortunately comes with the cost of concurrency bugs.
 %
-It employs channel-based Hoare's Communicating Sequential Processes (CSP) \cite{hoare-csp78} semantics in its core and provides a productivity-enhancing environment for concurrent programming.
+This trend can worsen with the upcoming HPC/Cloud
+integration~\cite{dan-herbein-dong} unless we accelerate the
+development of concurrency debugging methods.
 %
-The concurrent model in Go centers around
-1) \textit{goroutines} as light-weight user-level threads (processing units),
-2) \textit{channels} for explicit messaging to synchronize and share memory through communication, and
-3) a \textit{scheduler} that orchestrates goroutine interactions while shielding
-the user from
-many low-level
-aspects of the runtime.
+However, unless these debugging systems themselves are
+simple and widely applicable, the maintenance of multiple debugging and testing approaches will also prove to be a burden.
 %
-This design
-facilitates the
-construction
-of data flow models that efficiently utilize multiple CPU cores.
+Driven by these observations, in this paper, we take a feature-rich language, namely Go~\cite{go}, research how to develop a practical analysis (\ie~testing and debugging) method for real-world Go programs, and present the resulting new tool called \goat.
 %
-Because of the simple yet powerful concurrency model, many real production software systems take advantage of Go,
-including
-container software systems such as Docker \cite{merkel2014docker}, Kubernetes \cite{kubernetes},  key-value databases \cite{etcd}, and web server libraries \cite{grpc}.
+The main contribution of this work is to demonstrate how
+\goat's static and dynamic analysis methods---while very well known
+by their names and effectiveness in simpler contexts---can
+be brought to bear on realistic bug scenarios in the setting of
+a complex language such as Go.
+
+Go~\cite{go} is a statically typed language initially developed by Google.
+%
+It employs channel-based Hoare's Communicating Sequential Processes (CSP)~\cite{hoare-csp78} semantics in its core and provides a productivity-enhancing environment for concurrent programming.
+%
+Go enjoys accelerating acceptance in a wide variety of
+communities including container software systems~\cite{merkel2014docker,kubernetes},  distributed key-value databases~\cite{etcd,cockroachdb-sigmod20}, and web server libraries \cite{grpc}.
+%
+It involves shared memory, message passing, non-deterministic message reception and selection, dynamic process creation, and programming styles that tend to create thousands of \textit{goroutines}~(\ie~application-level threads) and discard them to be garbage collected when not needed.
+%
+The combination of these features is well known for Go's popularity, yet they also make Go challenging to debug.
+%
+Our work is especially relevant considering that there are no widely practical tools for debugging concurrent Go; even well-curated
+concurrency bug benchmark suites are only just now beginning to appear~\cite{tu-concurrentBugs-asplos19,yuan-gobench-cgo21}.
 %
 
+In general, concurrent bugs are notoriously difficult to find and reproduce due to the non-deterministic choices that the scheduler makes during execution.
+%
+In Go, constructs like \textit{select} and buffered channels entangle the process of debugging by introducing extra randomness to the dynamic behavior of the program.
+%
+Recent static~\cite{ng-dl-cc16,stadtmuller-minigo-aplas16,lange-fence-popl17,lange-staticType-icse18} and dynamic~\cite{go-race-blog,zhao-occam97,sulzmann-corr17,sulzmann-twophase-2018,dilley-gomela-corr2020} techniques have been proposed to address these challenges.
+%
+Although static methods are proved to be rigorously effective in detecting flaws in small programs, they often produce false positives and suffer from state explosion problems for realistic programs.
+%
+On the other hand, dynamic analysis approaches cover a more significant subset of real-world programs by constructing and analyzing an \textit{execution model}.
+%
+However, for large codebases with thousands of LOC, it is non-trivial to capture an accurate dynamic execution model using source instrumentation or source-to-source translation.
+%
+In addition, our experiments (section \ref{sec:f} **FIXME**) and results in~\cite{yuan-gobench-cgo21} show that some buggy programs takes up to more than 1000 runs to manifest the bug.
+%
+Concurrent testing methods~\cite{arora-concrrentTesting-16} are proposed to complement static and dynamic approaches in tackling challenges of concurrent debugging.
+%
+To the best of our knowledge, there exist no such testing methods applicable to Go semantics.
+%
+We implemented \goat, an analysis and testing framework for concurrent Go applications to address this lack.
+%
+\goat combines static and dynamic approaches to automatically analyze the behavior of concurrent components and facilitate testing and debugging Go applications.
+%
+Several classic ideas from literature are combined with novel ones to support modern concepts of Go in /goat, which pursues three primary objectives:
+\\
+\noindent{\bf Objective 1:\/} \textit{Accurate Dynamic Execution Modeling}---
+To study the behavior of concurrent components and track the program's state during executions, a dynamic execution model has to construct to get compared against a pre-defined model (\eg formally defined specification or developer's mental model of the program).
+%
+It is crucial for debuggers and software analysis tools to construct their execution models as close as possible to the actual program execution context.
+%
+Since a bug might occur at various levels of abstraction, \textit{dynamic tracing} provides a practical and uniform way to track multiple facets of the program during execution (as we have shown in our priorwork~\cite{difftrace}).
+%
+We have enhanced the built-in tracing mechanism of Go~\cite{ect-arxiv} to capture the dynamic behavior of concurrency primitives in the form of a sequence of events (execution concurrency trace---ECT).
+%
+Each event in ECT represents an action that corresponds to exactly one statement in the source code.
+%
+The ECT provides an accurate model of how a program behaves dynamically and assists debugging procedures (\eg bug detection, root-cause analysis, execution visualization).
+%
+Our experiments show that \goat detects all blocking bugs of GoKer~\cite{yuan-gobench-cgo21} many of which are overlooked or unnoticed by existing debugging tools by replaying the program's ECT.
+\\
+\noindent{\bf Objective 2:\/} \textit{Systematic Exploration of Schedule-Space}---
+Since the scheduler's non-deterministic behavior is the primary reason for Heisenbugs (\ie errors that are uncommon to occur and hard to reproduce), these bugs may not manifest during conventional testing.
+%
+By adopting ideas from \textit{systematic concurrency testing} approaches~\cite{dpor,thomson-concurrencyTesting-ppopp14,emmi-delayBounded-popl11,burckhardt-depthBug-asplos10,madanlal-preemptionBound-pldi07,yu-maple-oopsla12,joshi-calfuzzer,contest-jgi01,edelstein2003contest,hong-syncTesting-issta12,christakis-erlang-icst13,yuan-morpheus-asplos20}, we perturb the native scheduler of Go to explore the unconventional but feasible execution interleaving.
+%
+First, we statically identify the source location of concurrency primitive usages in a given program as their behavior defines the program's dynamic behavior.
+%
+Then we inject \goat handlers around these locations to manage schedule perturbation.
+%
+At its simplest form, handlers randomly decide if the current goroutine should continue executing or \textit{yield} to other goroutines to execute first.
+%
+Such yields change the blocking behavior of the program within the space of feasible states and exercise untested interleavings, consequently heighten the propensity for bug introduction.
+%
+Our experiments show that it is effective in accelerating the exposure of rare bugs.
 
-In traditional shared-memory concurrent languages such as Java/C/C++, threads interact with each other via shared memory.
+\noindent{\bf Objective 3:\/} \textit{Testing Quality Measurement}---
+The effectiveness of software testing is often assessed by measuring coverage of some aspects of the software, such as its source-code statements (\eg higher statement coverage of a test suite shows its higher thoroughness).
 %
-Processes in CSP-based languages such as Erlang communicate through mailbox (asynchronous) message passing.
+In the context of conrruent software, exisiting coverage metrics~\cite{edelstein2003contest,trainin-followsCoverage-padtad09,hong-syncTesting-issta12,yu-pset-isca09} characterize (quantify) the behavior of concurrency primitives which enables the quality measurement of schedule-space exploration.
 %
-Go brings all these features together into one language and encourages developers to \textit{share memory through communication} for safe and straightforward concurrency and parallelism.
+The characterization process consists of defining a set of requirements that must be met during testing and a method for measuring whether those requirements are met.
 %
-The visibility guarantee of memory writes is specified in the memory model\cite{go-memModel} under synchronization constraints (\textit{happens-before} partial order \cite{lamport-hb-1978}).
+Since Go combines traditional synchronization and serialization primitives~(mutex, conditional variables) with message-passing and introduces new concepts such as \textit{select-case}~(non-deterministic communication and synchronization), new coverage requirements are required to characterize the behavior of Go concurrency.
 %
-The language is equipped with a rich vocabulary of \textit{serialization} features to facilitate the memory model constraints; they include synchronous and asynchronous communication (either unbuffered or buffered channels), memory protection, and barriers for efficient synchronization.
+Using the \goat's infrastructure, we deep studied the underlying causes of bugs in GoKer benchmark~\cite{yuan-gobench-cgo21} and proposed a set of coverage requirements that 1) coherently characterize the dynamic behavior of concurrency primitives under various scheduling scenarios, and 2) enable measurement of schedule-space exploration until reaching a threshold, or the bug is exposed.
 %
-This rich mixture of features has, unfortunately, greatly exacerbated the complexity of Go debugging.
+We identify if coverage requirements are covered during testing by analyzing the test's ECT.
 %
-In fact, the popularity of Go has outpaced its debugging support~\cite{go-survey,tu-concurrentBugs-asplos19,yuan-gobench-cgo21}.
-%
-There are some encouraging developments in support of debugging, such as a data race checker \cite{go-race-blog} that has now become a standard feature of Go, and has helped catch many a bug.
-%
-However, the support for ``traditional concurrency debugging'' such as detecting atomicity violations and Go-specific bug-hunting support for Go idioms (e.g., misuse of channels and locks) remain insufficiently addressed.
-%
+We demonstrate that our novel coverage metric is effective in measuring the schedule-space exploration progress.
 
-In this work, we present the initial steps that we took towards addressing this lack.
-%
-Since a bug might
-occur
-at various levels of abstraction, dynamic tracing provides a practical and uniform way to track multiple facets of the program during execution (as we have shown in our prior work~\cite{difftrace}).
-%
-Also, unlike assertion-based tools \cite{lange-staticType-icse18,wolf-gobra-cav21}, a dynamic tool is more automated, not requiring user expertise.
-%
-We developed a facility that automatically gathers \textit{execution concurrency traces} (\ie sequences of events) during the execution of Go applications with minimal instrumentation.
-%
-By enhancing the Go built-in tracing mechanism with \textit{concurrency usage} events, we enrich original \textit{execution traces} so that they accurately reflect the dynamic concurrency behavior of applications.
-%
-Upon Go programs' termination when tracing is enabled, traces are flushed and structurally stored in relational tables of an SQL database, enabling multi-aspect program analysis in offline.
-%
 
-With the help of this novel \textit{automated dynamic tracing} mechanism,
-we have implemented a testing framework that
-\textit{accelerates} bug exposure by manipulating the native scheduler around \textit{critical points} in the code---combination of constructs that heighten the propensity for bug-introduction.
-%
-\stcmt{Effectivness of Go in detecting bugs and accelrating bug exposure}
+To summarize, here are our main contributions:
 \begin{itemize}
-  \item We have tested GOAT on GoBench GoKer
-  \item Majority of bugs are caught and their root cause is studied using GOAT features.
-  \item However, there are some bugs that are rare to happen (figure \ref{fig:rare_bugs}).
-  \item These are the kind of bugs that are often refered as \textit{hidden bugs}
-  \item So we want to expose them sooner by purturbing the scheduler
-  \item It is proved that random testing would often perform as well as systematic testing in accelerating bug exposure.
-  \item Such facility is not available for Go, so we implemented GOAT
+    \item We introduce \goat, a testing and analysis framework that facilitates whole-program trace collection (via an enhancement to the standard tracer package) and knowledge discovery about the program's dynamic behavior.
+    \item We automatically identify concurrency usage of given programs and inject handlers around them to systematically explore the interleaving space and accelerate bug manifestation.
+    \item We propose a set of coverage requirements that characterize the dynamic behavior of concurrency primitives, enabling measurement of quality and progress of schedule-space exploration.
 \end{itemize}
 
-\stcmt{intro to coverage}
-\begin{itemize}
-  \item We also have defined a coverage metric/model/criterion To measure the quality of tests that GOAT is able to perform.
-  %
-  \item Our experiments show that GOAT is effecive in detecting 100\% of blocking bugs in GoKer bench.
-  \item Our experiments also show that the coverage metrics that we designed have linear correlation with the rate of bug exposure (i.e., number of testing runs that it takes for the buggy interleaving to occur) for rare bugs.
-  \item While these ideas have been developed and proved to be effective in other contexts \cite{burckhardt-depthBug-asplos10,emmi-delayBounded-popl11,madanlal-preemptionBound-pldi07}, our contribution is to show these ideas in the context of a modern language with growing industry-side adoption.
-\end{itemize}
-
-
-To summarize, here are our contributions:
-\stcmtside{need to update}
-\begin{itemize}
-    \item We take the tracing mechanism embedded in the standard Go that captures \textit{execution trace} (ET) and enhance it with a set of concurrency primitive usage events to obtain \textit{execution concurrency trace} (ECT). While the primary usage of ET is performance analysis, ECT provides an accurate and comprehensive model of concurrent execution, enabling automated analysis of logical behavior and concurrent bug detection.
-    \item We introduce a framework that automatically instruments the target program, collects ECT, and structurally stores them in a database. Through querying the database, several visualizations and reports are accessible.
-    \item We propose an approach to identify the points (\ie source line number) in the target program in which a random noise might drastically change the program's dynamic behavior. We analyze ECTs to identify such points and measure schedule space coverage per execution.
-    \item Coverage metric
-\end{itemize}
 \stcmtside{need to update}
 The rest of this paper is as follows: Section \ref{sec:correctness} discusses correctness problems and approaches in Go. Section \ref{sec:ect} describes the enhancement we made to the tracer package. Section \ref{sec:disc} discusses the advantages of dynamic tracing for concurrent debugging and draws the ongoing and future direction of the current work. At last, section \ref{sec:summary} summarizes and concludes.
